sticky-nav z-index fixed

--- a/ntusecondhand/static/css/main.css
+++ b/ntusecondhand/static/css/main.css
@@ -288,7 +288,7 @@ header .sticky-nav {
     width: 100%;
     height: 60px;
     background: #26292E;
-    z-index: 1;
+    z-index: 3;
 
     -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
     -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
